force-app/main/default/objects/CX_Related_Quick_Link__mdt/CX_Related_Quick_Link__mdt.object-meta.xml
<CustomObject>
    <label>CX Related Quick Link</label>
    <pluralLabel>CX Related Quick Links</pluralLabel>
</CustomObject>