force-app/main/default/objects/CX_Related_Quick_Link__mdt/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <label>iconName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>