force-app/main/default/objects/CX_Related_Quick_Link__mdt/fields/relationshipApiName__c.field-meta.xml
<CustomField>
    <fullName>relationshipApiName__c</fullName>
    <label>relationshipApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>