force-app/main/default/objects/CX_Related_Quick_Link__mdt/fields/targetApiName__c.field-meta.xml
<CustomField>
    <fullName>targetApiName__c</fullName>
    <label>targetApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>